tests/errors/semantic_52/s3.src
.IPPcode21

CREAtEFRAME
DEFVAR TF@a
PUSHFRAME
MOVE LF@a int@5
POPFRAME
DEFVAR TF@a
